style.css
/*==== GLOBAL ==========================*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    font-size: 62.5%; /* 1rem == 10px */
}

.wrapper {
    margin-inline: auto;
    width: min(60rem, 100%);
}

body {
    font-size: 1.6rem;
    font-family: "Roboto", sans-serif;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

header, #settings, #result, footer {
    padding-inline: 2rem;
}

/*==== MAIN ==========================*/
main {
    flex: 1;
    
    display: flex;
    flex-direction: column;
    gap: 4rem;

    padding-top: 2rem;
    padding-inline: 2rem;
}

/*---- HEADER ----------------------- */
main header {
    height: 20rem;

    border: blue 2px solid;
    border-radius: 1.5rem;

    display: flex;
    align-items: center;
}

main header h1 {
    width: 100%;

    font-size: 5rem;
    text-align: center;
}

/*---- SETTINGS ----------------------- */
main #settings {
    padding-block: 4rem;

    border: purple solid 2px;
    border-radius: 1.5rem;

    display: flex;
    flex-direction: column;
    gap: 4rem;
}

main #settings label {
    font-size: 3rem;
}

main #settings label input,
main #settings #numberOfWinnersPicked #numberOfWinners {
    height: 5rem;
    width: 10rem;

    padding: .8rem 0rem .8rem 1.5rem;

    border-color: purple;
    border-radius: 1rem;

    font-size: 2.5rem;
    line-height: 0;
    text-align: center;
}

main #settings #numberOfWinnersPicked {
    display: flex;
    flex-direction: column;
    align-items: center;
}

main section #range {
    display: flex;
    justify-content: center;
    gap: 6rem;
    flex-wrap: wrap;
}

main section #range label {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 1rem;
}

main section #range label:first-child,
main section #range label:nth-child(2) {
    position: relative;
}

main section #range label:first-child::before {
    content: "De: ";
    position: absolute;
    left: -4.5rem;
}

main section #range label:nth-child(2)::before {
    content: "Até: ";
    position: absolute;
    left: -5.5rem;
}

/*---- RESULT ----------------------- */
main #result {
    display: flex;
    flex-direction: column;
    align-items: center;
}

main #result button#pick {
    width: 20rem;
    height: 8rem;

    border-radius: 4rem;

    font-size: 2rem;
    font-weight: 700;
    letter-spacing: .3rem;
    text-transform: uppercase;
}

main #result #winners {
    width: 80%;
    padding-block: 5rem;
}

main #result #winners #currentWinner {
    width: 100%;

    margin-bottom: 3rem;
}

main #result #winners #currentWinner #winner {
    font-size: 4rem;
    text-align: center;

    margin-inline: auto;
}

main #result #winners #winnersList {
    border: solid 2px rgb(230, 0, 0);
    border-radius: 1.5rem;

    padding: 1rem 5rem;

    min-height: 14.4rem;

    background-color: rgb(240, 240, 240);
}

main #result #winners #winnersList ol {
    display: flex;
    flex-direction: column;

    font-size: 2rem;
}

main #result #winners #winnersList ol li {
    padding-block: .3rem;
}

main #result #winners #winnersList ol li:nth-child(odd) {
    background-color: lightgray;
}

main #result #winners #winnersList ol li:nth-child(even) {
    background-color: rgb(240, 240, 240);
}

main #result #winners #winnersList ol li {
    text-align: center;
}

/*====FOOTER==========================*/
footer {
    background-color: rgb(200, 200, 200);

    height: 15rem;

    display: flex;
    justify-content: center;

    border-top: rgb(150, 150, 150) solid 1px;
}

footer #author {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

footer #author p {
    flex: 1;
    flex-shrink: 1;

    text-align: center;
}

footer #author #links {
    flex-shrink: 2;
}

